--- a/apps/admin-panel/src/app/app.component.html
+++ b/apps/admin-panel/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<sue-header *ngIf="isHeaderVisible$ | async"></sue-header>
+{{ isHeaderVisible$ | async }}
+<div class="content">
+  <router-outlet></router-outlet>
+</div>
