dashboard widgets with mocked data

--- a/apps/admin-panel/src/app/shared/header/header.component.html
+++ b/apps/admin-panel/src/app/shared/header/header.component.html
@@ -2,10 +2,7 @@
     <div class="logo" [routerLink]="'dashboard'"></div>
     <span class="fill-remaining-space"></span>
     <div class="nav">
-        <button mat-button [routerLink]="'/dictionaries'">DICTIONARIES</button>
-        <button mat-button [routerLink]="'/notifications'">NOTIFICATIONS</button>
-        <button mat-button [routerLink]="'/products'">PRODUCTS</button>
-        <button mat-button [routerLink]="'/admin'">ADMIN</button>
-        <button mat-button [routerLink]="'/login'">LOGOUT</button>
+        <button mat-button [routerLink]="'/dashboard'">Dashboard</button>
+        <button mat-button [routerLink]="'/login'">Logout</button>
     </div>
 </mat-toolbar>
