added partially real data from db

--- a/apps/admin-panel/src/app/modules/dashboard/widgets/bot-metrics/bot-metrics.component.html
+++ b/apps/admin-panel/src/app/modules/dashboard/widgets/bot-metrics/bot-metrics.component.html
@@ -1,7 +1,9 @@
+@if (isLoaded) {
 <ngx-charts-number-card
-[view]="getView(0.33, 425)"
-[scheme]="colorScheme"
-[results]="data"
-[animations]="true"
+  [view]="view"
+  [scheme]="colorScheme"
+  [results]="data"
+  [animations]="true"
 >
 </ngx-charts-number-card>
+}
