--- a/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
+++ b/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <span class="thumb-title">Bot Metrics</span>
     <sue-bot-metrics-widget></sue-bot-metrics-widget>
   </mat-card>
-  <mat-card class="item wide-width">
+  <mat-card class="item wide">
     <span class="thumb-title">Users</span>
     <sue-users-chart-widget></sue-users-chart-widget>
   </mat-card>
@@ -11,7 +11,7 @@
     <span class="thumb-title">Server/Tasks Metrics</span>
     <sue-server-metrics-widget></sue-server-metrics-widget>
   </mat-card>
-  <mat-card class="item wide-width">
+  <mat-card class="item wide">
     <span class="thumb-title">Send message to all users</span>
   </mat-card>
 </div>
