--- a/apps/admin-panel/src/app/modules/dashboard/widgets/server-metrics/server-metrics.component.scss
+++ b/apps/admin-panel/src/app/modules/dashboard/widgets/server-metrics/server-metrics.component.scss
@@ -1,10 +1,12 @@
+@use 'variables' as v;
+
 :host {
   margin-top: 0;
 }
 
 .status-value {
   font-weight: bold;
-  margin-left: 0.5rem;
+  @include v.space-orange(margin-left);
 }
 
 mat-list {
