webpack update, add empty broadcast message widget

--- a/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
+++ b/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
@@ -13,5 +13,6 @@
   </mat-card>
   <mat-card class="item wide">
     <span class="thumb-title">Send message to all users</span>
+    <sue-broadcast-message-widget></sue-broadcast-message-widget>
   </mat-card>
 </div>
