--- a/apps/admin-panel/src/app/shared/header/header.component.html
+++ b/apps/admin-panel/src/app/shared/header/header.component.html
@@ -2,6 +2,7 @@
     <div class="logo" [routerLink]="'dashboard'"></div>
     <span class="fill-remaining-space"></span>
     <div class="nav">
+        <button mat-button [routerLink]="'/admin'">Admin Management</button>
         <button mat-button [routerLink]="'/login'">Logout</button>
     </div>
 </mat-toolbar>
