--- a/apps/admin-panel/src/styles/_variables.scss
+++ b/apps/admin-panel/src/styles/_variables.scss
@@ -26,6 +26,8 @@ $font-size-small: 12px;
 $font-size-large: 16px;
 
 $transparent-background: rgba($color: #ffffff, $alpha: 0.75);
+$transparent-background-dark-100: rgba(0, 0, 0, 0.04);
+$transparent-background-dark-500: rgba($color: #000000, $alpha: 0.75);
 
 @mixin space-yellow($properties...) {
   @each $property in $properties {
