--- a/apps/admin-panel/src/styles/_variables.scss
+++ b/apps/admin-panel/src/styles/_variables.scss
@@ -4,7 +4,14 @@ $warning-color: #f8ab37;
 $error-color: #9b000e;
 $success-color: #508b1b;
 $light-green: #9fd45f;
-$grey: #646973;
+$cool-grey-100: #f0f3f5;
+$cool-grey-200: #d7dce1;
+$cool-grey-300: #afb4bb;
+$cool-grey-400: #878c96;
+$cool-grey-500: #646973;
+$cool-grey-600: #3c414b;
+$cool-grey-700: #282d37;
+$cool-grey-800: #131821;
 $space-yellow: 0.25rem;
 $space-orange: 0.5rem;
 $space-pink: 0.75rem;
