--- a/apps/admin-panel/src/app/shared/footer/footer.component.html
+++ b/apps/admin-panel/src/app/shared/footer/footer.component.html
@@ -1,10 +1,10 @@
 <div class="footer-container">
     <div class="icons left">
-        <a href="http://www.grynyk.com" target="_blank">All rights reserved 2025<mat-icon>copyright</mat-icon></a>
+        <a class="link" href="http://www.grynyk.com" target="_blank">All rights reserved 2025<mat-icon>copyright</mat-icon></a>
     </div>
     <span class="fill-remaining-space"></span>
     <div class="icons right">
-        <a href="https://t.me/mysuebot" target="_blank"><mat-icon>android</mat-icon></a>
-        <a href="https://github.com/grynyk/" target="_blank"><mat-icon>code</mat-icon></a>
+        <a class="link" href="https://t.me/mysuebot" target="_blank"><mat-icon>android</mat-icon></a>
+        <a class="link" href="https://github.com/grynyk/" target="_blank"><mat-icon>code</mat-icon></a>
     </div>
 </div>
