--- a/apps/admin-panel/src/app/shared/header/header.component.html
+++ b/apps/admin-panel/src/app/shared/header/header.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar>
-    <div class="logo" [routerLink]="'dashboard'"></div>
+    <div class="logo" [routerLink]="'/'"></div>
     <span class="fill-remaining-space"></span>
     <div class="nav">
-        <button mat-button [routerLink]="'/admin'">Admin Management</button>
+        <button mat-button [routerLink]="'/admin-management'">Admin Management</button>
         <button mat-button [routerLink]="'/login'">Logout</button>
     </div>
 </mat-toolbar>
