--- a/apps/admin-panel/src/styles.scss
+++ b/apps/admin-panel/src/styles.scss
@@ -38,7 +38,7 @@ a {
   text-decoration: none;
   &:hover {
     text-decoration: underline;
-    color: v.$grey;
+    color: v.$cool-grey-200;
   }
 }
 
