--- a/apps/admin-panel/src/app/shared/footer/footer.component.html
+++ b/apps/admin-panel/src/app/shared/footer/footer.component.html
@@ -5,6 +5,6 @@
     <span class="fill-remaining-space"></span>
     <div class="icons right">
         <a class="link" href="https://t.me/mysuebot" target="_blank"><mat-icon>android</mat-icon></a>
-        <a class="link" href="https://github.com/grynyk/" target="_blank"><mat-icon>code</mat-icon></a>
+        <a class="link" href="https://github.com/grynyk/sue-bot-platform" target="_blank"><mat-icon>code</mat-icon></a>
     </div>
 </div>
