--- a/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
+++ b/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
 <div class="grid">
   <mat-card class="item">
-    <span class="thumb-title">Bot Metrics</span>
+    <span class="thumb-title">Users Metrics</span>
     <sue-bot-metrics-widget></sue-bot-metrics-widget>
   </mat-card>
   <mat-card class="item wide">
-    <span class="thumb-title">Users</span>
+    <span class="thumb-title">Users Registration</span>
     <sue-users-chart-widget></sue-users-chart-widget>
   </mat-card>
   <mat-card class="item">
