add wrapper class for users chart

--- a/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
+++ b/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
     <sue-bot-metrics-widget></sue-bot-metrics-widget>
   </mat-card>
   <mat-card class="item wide">
-    <span class="thumb-title">Users Registration</span>
+    <span class="thumb-title">Users Registration Timeline</span>
     <sue-users-chart-widget></sue-users-chart-widget>
   </mat-card>
   <mat-card class="item">
@@ -12,7 +12,7 @@
     <sue-server-metrics-widget></sue-server-metrics-widget>
   </mat-card>
   <mat-card class="item wide">
-    <span class="thumb-title">Send message to all users</span>
+    <span class="thumb-title">Broadcast Message</span>
     <sue-broadcast-message-widget></sue-broadcast-message-widget>
   </mat-card>
 </div>
