--- a/apps/admin-panel/src/app/modules/dashboard/widgets/users-chart/users-chart.component.html
+++ b/apps/admin-panel/src/app/modules/dashboard/widgets/users-chart/users-chart.component.html
@@ -3,7 +3,7 @@
   <ngx-charts-line-chart
   [view]="view"
   [scheme]="colorScheme"
-  [results]="userRegistrationData"
+  [results]="data"
   [gradient]="gradient"
   [xAxis]="showXAxis"
   [yAxis]="showYAxis"
