--- a/apps/admin-panel/src/app/modules/admin-management/containers/admin-management/admin-management.component.html
+++ b/apps/admin-panel/src/app/modules/admin-management/containers/admin-management/admin-management.component.html
@@ -1,3 +1,3 @@
-<mat-card *ngIf="data$ | async as data">
-    <sue-admin-table [data]="data"></sue-admin-table>
-</mat-card>
+@if (data$ | async; as data) {
+<sue-admin-table [data]="data"></sue-admin-table>
+}
