--- a/apps/admin-panel/src/app/modules/dashboard/widgets/users-chart/users-chart.component.html
+++ b/apps/admin-panel/src/app/modules/dashboard/widgets/users-chart/users-chart.component.html
@@ -11,6 +11,7 @@
   [showXAxisLabel]="false"
   [showYAxisLabel]="false"
   [timeline]="timeline"
+  [autoScale]="true"
 >
 </ngx-charts-line-chart>
 </div>
