--- a/apps/admin-panel/src/app/modules/admin-management/components/admin-table/admin-table.component.scss
+++ b/apps/admin-panel/src/app/modules/admin-management/components/admin-table/admin-table.component.scss
@@ -1,18 +1,33 @@
 @use 'variables' as v;
 
+:host {
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+.wrapper {
+  width: 100%;
+  background-color: v.$transparent-background-light-800;
+}
+
 .header-container {
   display: flex;
   flex-direction: column;
-  border-bottom: v.$space-yellow solid v.$transparent-background-dark-100;
+  border-bottom: v.$space-yellow solid v.$transparent-background-dark-300;
   padding: v.$space-blue;
   .action-bar {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    gap: 1rem;
     &__buttons {
       display: flex;
       gap: v.$space-blue;
+      &-mobile {
+        display: none;
+      }
     }
     &__search {
       margin-bottom: -1.25rem;
@@ -22,14 +37,26 @@
 
 .table-container {
   position: relative;
-  height: calc(100vh - 16.5rem);
   overflow: auto;
 }
 
 .table-row {
-  height: v.$space-cyan;
+  height: v.$space-navy;
   cursor: pointer;
   &:hover {
     background-color: v.$transparent-background-dark-100;
+  }
+}
+
+@media (max-width: 768px) {
+  .header-container {
+    .action-bar {
+      &__buttons {
+        display: none;
+        &-mobile {
+          display: flex;
+        }
+       }
+     }
   }
 }
