--- a/apps/admin-panel/src/app/modules/admin-management/containers/admin-management/admin-management.component.scss
+++ b/apps/admin-panel/src/app/modules/admin-management/containers/admin-management/admin-management.component.scss
@@ -1,6 +1,5 @@
-.action-bar {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    padding: 20px 0 0 20px;
-  }
+:host {
+  display: block;
+  width: 100%;
+  height: 100%;
+}
