fixed width and styles of widgets

--- a/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.scss
+++ b/apps/admin-panel/src/app/modules/dashboard/containers/dashboard/dashboard.component.scss
@@ -34,14 +34,14 @@
   &-title {
     font-size: v.$space-lime;
     font-weight: bold;
-    @include v.space-blue(padding-left);
-    @include v.space-orange(padding-bottom);
+    @include v.space-blue(padding-left, padding-bottom);
   }
   &-content {
     display: flex;
     align-items: center;
     justify-content: center;
     overflow-y: auto;
+    width: 100%;
   }
 }
 
