--- a/apps/admin-panel/src/app/modules/dashboard/widgets/users-chart/users-chart.component.scss
+++ b/apps/admin-panel/src/app/modules/dashboard/widgets/users-chart/users-chart.component.scss
@@ -1,5 +1,10 @@
 @use 'variables' as v;
 
+sue-users-chart-widget {
+  width: 100%;
+  height: 100%;
+}
+
 .content {
   @include v.space-blue(padding-left);
 }
