styles adjustments widgets

--- a/apps/admin-panel/src/app/modules/dashboard/widgets/server-metrics/server-metrics.component.scss
+++ b/apps/admin-panel/src/app/modules/dashboard/widgets/server-metrics/server-metrics.component.scss
@@ -34,7 +34,11 @@ mat-divider {
 @media (max-width: 768px) {
   mat-list:not(.important) {
     mat-list-item {
-      height: v.$space-red;
+      &.mdc-list-item {
+        &.mdc-list-item--with-one-line:not(.important) {
+          height: v.$space-red;
+        }
+      }
       .mdc-list-item__content {
         font-size: v.$font-size-small;
       }
