--- a/apps/admin-panel/src/app/shared/header/header.component.scss
+++ b/apps/admin-panel/src/app/shared/header/header.component.scss
@@ -1,9 +1,7 @@
 @use 'variables' as v;
 
 mat-toolbar {
-  padding-top: 0;
-  padding-bottom: 0;
-  @include v.space-green(padding-left, padding-right);
+  padding: 0;
   background-color: v.$transparent-background-light-800;
 }
 
@@ -14,12 +12,14 @@ mat-toolbar {
   background-size: v.$space-cyan v.$space-cyan;
   width: v.$space-cyan;
   height: v.$space-cyan;
+  margin-left: v.$space-blue;
 }
 
 .nav {
   list-style: none;
   margin: 0;
   padding: 0;
+  margin-right: v.$space-blue;
   &.mobile {
     display: none;
   }
@@ -32,6 +32,7 @@ mat-toolbar {
 @media (max-width: 768px) {
   .nav {
     display: none;
+    margin-right: v.$space-orange;
     &.mobile {
       display: block;
     }
