admin management list connected to BE

--- a/apps/admin-panel/src/app/modules/admin-management/containers/admin-management/admin-management.component.html
+++ b/apps/admin-panel/src/app/modules/admin-management/containers/admin-management/admin-management.component.html
@@ -1,3 +1,3 @@
-@if (data$ | async; as data) {
-  <sue-admin-table [data]="data"></sue-admin-table>
+@if (dataSource$ | async; as dataSource) {
+  <sue-admin-table [dataSource]="dataSource"></sue-admin-table>
 }
