toggle visibility password, interceptor fix

--- a/apps/admin-panel/src/app/modules/auth/components/login/login.component.html
+++ b/apps/admin-panel/src/app/modules/auth/components/login/login.component.html
@@ -1,10 +1,11 @@
 <form [formGroup]="formGroup" class="form">
   <mat-form-field>
-    <input type="text" matInput placeholder="E-mail" formControlName="email" />
+    <input matInput type="email" name="email"  placeholder="E-mail" formControlName="email" autocomplete="email"/>
     <mat-error *ngIf="email.invalid">{{ email.errors | FormError }}</mat-error>
   </mat-form-field>
   <mat-form-field>
-    <input type="password" matInput placeholder="Password" formControlName="password" />
+    <input matInput [type]="isHiddenPassword ? 'password' : 'text'" name="password" placeholder="Password" formControlName="password" autocomplete="current-password"/>
+    <mat-icon matSuffix (click)="togglePasswordVisibility()">{{ isHiddenPassword ? 'visibility_off' : 'visibility' }}</mat-icon>
     <mat-error *ngIf="password.invalid">{{ password.errors | FormError }}</mat-error>
   </mat-form-field>
   <div class="submit-button">
